--- a/GrpcGreeter.csproj
+++ b/GrpcGreeter.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Grpc.AspNetCore" Version="2.49.0" />
+    <PackageReference Include="Ulid" Version="1.2.6" />
   </ItemGroup>
 
 </Project>
